# ModularProcess

./: README.md  pyproject.toml
examples/: NISelements.py
src/modularprocess/: __init__.py  modularprocess.py
src/modularprocessing/: __init__.py  modularprocessing.py
tests/: test_core.py
