[project]
name = "modularprocessing"
version = "0.2.0"
description = "Core data abstractions for modular file processing in Python"
readme = "README.md"
authors = [
    { name = "eweix", email = "elliott@weix.us" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
modularprocessing = "modularprocessing:main"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
exclude = ["examples/"]

[dependency-groups]
dev = [
    "pyright>=1.1.410",
    "pytest>=9.0.3",
    "ruff>=0.15.17",
]
