[project]
name = "modularprocess"
version = "0.3.1"
description = "Core data abstractions for modular file processing in Python"
readme = "README.md"
authors = [
    { name = "eweix", email = "elliott@weix.us" }
]
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
exclude = ["examples/"]

[dependency-groups]
dev = [
    "pyright>=1.1.410",
    "pytest>=8.4.2",
    "ruff>=0.15.17",
]
